@@ -1,6 +1,8 @@
 dclone package version history
 
 Version 1.0-4, January 14, 2010
+    * nclones.list: returns 'method' attributes.
+    * vcov: got invfisher argument.
     * S3 methods added for diagnostic functions.
     * dclone options restructured.
     * dclone and dcpar split: parallet computing features
